--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <RelativeLayout
-        android:gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/background">
 
         <LinearLayout
-            android:layout_marginBottom="100dp"
+
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
@@ -23,15 +25,15 @@
                 <ImageView
                     android:layout_width="200dp"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/login_logo_01"/>
+                    android:src="@drawable/login_logo_01" />
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginLeft="60dp"
-                android:layout_marginRight="60dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginLeft="60dp"
+                android:layout_marginRight="60dp"
                 android:background="@drawable/viewbackground"
                 android:orientation="vertical">
 
@@ -39,11 +41,11 @@
                     android:id="@+id/edit_userid"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
+                    android:background="@android:color/transparent"
                     android:gravity="center"
                     android:hint="아이디 입력"
-                    android:background="@android:color/transparent"
-                    android:text=""
                     android:singleLine="true"
+                    android:text=""
                     android:textColor="#000000"
                     android:textColorHint="#bfbebe"
                     android:textSize="20dp" />
@@ -57,13 +59,13 @@
                     android:id="@+id/edit_userpass"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
+                    android:background="@android:color/transparent"
                     android:gravity="center"
-                    android:singleLine="true"
                     android:hint="패스워드 입력"
                     android:inputType="textPassword"
+                    android:singleLine="true"
                     android:text=""
                     android:textColor="#000000"
-                    android:background="@android:color/transparent"
                     android:textColorHint="#bfbebe"
                     android:textSize="20dp" />
 
@@ -71,9 +73,9 @@
             </LinearLayout>
 
             <LinearLayout
-                android:layout_marginTop="20dp"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
                 <LinearLayout
@@ -83,63 +85,85 @@
                     android:layout_marginRight="10dp"
                     android:layout_weight="1">
 
-                <Button
-                        android:onClick="btn_signup"
+                    <Button
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/input_round"
+                        android:onClick="btn_signup"
                         android:text="회원가입"
-                        android:textSize="20dp"
-                        android:background="@drawable/input_round"/>
+                        android:textSize="20dp" />
 
                 </LinearLayout>
 
                 <LinearLayout
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginRight="60dp"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="60dp"
                     android:layout_weight="1">
 
                     <Button
                         android:id="@+id/btn_id_login"
-                        android:onClick="btn_login"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/input_round"
+                        android:onClick="btn_login"
                         android:text="로그인"
-                        android:textSize="20dp"
-                        android:background="@drawable/input_round"/>
+                        android:textSize="20dp" />
 
                 </LinearLayout>
 
             </LinearLayout>
 
-        <LinearLayout
-            android:layout_marginTop="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal">
+            <LinearLayout
+                android:layout_marginBottom="100dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:orientation="horizontal">
 
-            <CheckBox
-                android:id="@+id/login_save"
-                android:layout_width="30dp"
-                android:layout_height="30dp" />
+                <CheckBox
+                    android:id="@+id/login_save"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="아이디, 패스워드 저장하기"
+                    android:textColor="#ffffff"
+                    android:textSize="16dp"
+                    android:textStyle="bold" />
+
+            </LinearLayout>
+
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:onClick="login_sand_emmail"
+            android:gravity="center"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="60dp"
+            android:layout_marginLeft="60dp"
+            android:layout_alignParentBottom="true"
+            android:layout_width="match_parent"
+            android:layout_height="35dp"
+            android:background="@drawable/btn_blackound4">
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="16dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:gravity="center"
-                android:textStyle="bold"
                 android:textColor="#ffffff"
-                android:text="아이디, 패스워드 저장하기"/>
+                android:text="비밀번호 찾기 문의"
+                android:textStyle="italic"/>
 
         </LinearLayout>
-
-
-        </LinearLayout>
-
 
     </RelativeLayout>
+
 
 </LinearLayout>
