--- a/app/src/main/res/layout/tab2_read.xml
+++ b/app/src/main/res/layout/tab2_read.xml
@@ -47,12 +47,6 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent">
 
-                        <ImageView
-                            android:layout_centerHorizontal="true"
-                            android:id="@+id/tab2_read_point_img"
-                            android:layout_width="130dp"
-                            android:layout_height="130dp"/>
-
                         <LinearLayout
                             android:onClick="tab2_btn_mentopen"
                             android:layout_marginRight="15dp"
@@ -79,6 +73,13 @@
                                 android:textColor="#777777"/>
 
                         </LinearLayout>
+
+                        <ImageView
+                            android:id="@+id/tab2_read_point_img"
+                            android:layout_width="130dp"
+                            android:layout_height="130dp"
+                            android:layout_alignParentTop="true"
+                            android:layout_centerHorizontal="true" />
 
                     </RelativeLayout>
 
